--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,9 +12,11 @@
     "@ai-sdk/openai": "latest",
     "ai": "latest",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
