--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ai": "latest",
     "next": "latest",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
