--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "next-groq",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "latest",
+    "@ai-sdk/groq": "^1.0.4",
     "ai": "^4.0.9",
     "next": "^14.2.18",
     "next-pwa": "^5.6.0",
